feat: init app