@@ -3,19 +3,19 @@ package com.kxxnzstdsw.linkhorizon.utils;
 import org.apache.logging.log4j.util.Strings;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 public class UrlUtils {
-    @SuppressWarnings("deprecation")
     public static boolean validURL(String urlString) {
         if (Strings.isEmpty(urlString)) {
             return false;
         }
 
         try {
-            new URL(urlString);
+            new URI(urlString).toURL();
             return true;
-        } catch (MalformedURLException e) {
+        } catch (MalformedURLException | URISyntaxException e) {
             return false;
         }
     }
